# Allen

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  contributing.md  lhcbproject.yml  readme.md  readme_docker.md  readme_monitor.md  selections.md
Dumpers/BinaryDumpers/: CMakeLists.txt
Online/AllenIntegration/: CMakeLists.txt  readme.md
Rec/Allen/: CMakeLists.txt  readme.md
backend/: CMakeLists.txt
backend/include/: AllenTypeTraits.h  BackendCommon.h  BackendCommonInterface.h  CPUBackend.h  CPUID.h  CUDABackend.h  CUDAHIPBackend.h  HIPBackend.h  PinnedVector.h  TypeID.h  Vector.h
backend/src/: CPUBackend.cpp  CPUID.cpp  CUDABackend.cpp  CUDAHIPBackend.cpp  HIPBackend.cpp  HalfType.cpp  Utils.cpp
checker/: CMakeLists.txt
checker/clustering/: CMakeLists.txt
checker/perfscans/: PerfScan_CompassUT.sh  PerfScan_GEC.sh  PerfScan_PV.sh  PerfScan_SciFi.sh  PerfScan_VELO.sh  makePlots.py  makeThroughputVsGEC.py  process_all_MC_samples_for_physics_checks.sh  split_input_into_1k_slices.py  throughput_vs_occupancy.py
checker/plotting/: __init__.py  check_throughput.py  csv_plotter.py  extract_algo_breakdown.py  group_algos.py  post_combined_message.py  post_telegraf.py  speedup_cli_plot.py  termgraph.py  update_gitlab.py
checker/pv/: CMakeLists.txt
checker/selections/: CMakeLists.txt  get_eff.py
checker/tracking/: CMakeLists.txt
configuration/: CMakeLists.txt  readme.md  test_configuration.sh
configuration/AllenConf/: AllenSequenceGenerator.py  cftree_ops.py  event_list_utils.py
configuration/AllenCore/: AllenKernel.py  AllenSequenceGenerator.py  cftree_ops.py  event_list_utils.py  generator.py
configuration/constants/: ConfigurationGuide.json  DefaultSequence.json  HLT1.json  HLT1_NoUTCut.json  Muon.json  PV.json  default.json  restricted_ut.json
configuration/gaudi/: VELO.py  forward.py  hlt1_pp_default.py  muon.py  pv.py  ut.py  velo.py
configuration/generator/: CaloSequence.py  Forward.h  ForwardSequence.py  HLT1.h  HLT1Sequence.py  HLT1_scifiv6.h  MakeDefaultConfiguration.py  MakeDefaultConfigurations.py  Muon.h  MuonSequence.py  PV.h  PVSequence.py  UT.h  UTSequence.py  VELO.h  VeloConfiguration.py  VeloSequence.py  base_types.py  parse_algorithms.py
configuration/include/: TCK.h
configuration/parser/: AlgorithmTraversalLibClang.py  ParseAlgorithms.py  StructToTupleGenerator.py
configuration/pregenerated/: Forward.h  HLT1NoGEC.h  HLT1NoGECNoUTCut.h  HLT1NoUTCut.h  HLT1SciFiv6.h  Muon.h  UT.h  VELO.h  calo.json  calo_lines.h  calo_sequence.h  forward.h  forward.json  forward_input_aggregates.h  forward_sequence.h  forward_v6_input_aggregates.h  forward_v6_sequence.h  hlt1_complex_validation.json  hlt1_complex_validation_input_aggregates.h  hlt1_complex_validation_sequence.h  hlt1_pp_calo.json  hlt1_pp_calo_input_aggregates.h  hlt1_pp_calo_lines.h  hlt1_pp_calo_sequence.h  hlt1_pp_default.h  hlt1_pp_default.json  hlt1_pp_default_calo.json  hlt1_pp_default_calo_lines.h  hlt1_pp_default_calo_sequence.h  hlt1_pp_default_input_aggregates.h  hlt1_pp_default_sequence.h  hlt1_pp_no_gec.h  hlt1_pp_no_gec.json  hlt1_pp_no_gec_input_aggregates.h  hlt1_pp_no_gec_lines.h  hlt1_pp_no_gec_no_ut_cut.h  hlt1_pp_no_gec_no_ut_cut.json  hlt1_pp_no_gec_no_ut_cut_input_aggregates.h  hlt1_pp_no_gec_no_ut_cut_lines.h  hlt1_pp_no_gec_no_ut_cut_sequence.h  (+45 more)
configuration/sequences/: Calo.h  DefaultSequence.h  Forward.h  Forward.py  HLT1.h  HLT1.json  HLT1.py  HLT1NoGEC.h  HLT1NoGEC.py  HLT1NoGECNoUTCUT.h  HLT1NoGECNoUTCut.py  HLT1NoUTCut.h  HLT1NoUTCut.py  HLT1SciFiv6.py  HLT1_NoUTCut.h  HLT1_NoUTCut.json  HLT1_scifiv6.h  HLT1_scifiv6.json  Muon.h  Muon.py  PV.h  PV.py  UT.h  UT.py  VELO.h  VELO.py  calo.py  calo_clustering.py  custom.py  forward.py  forward_reconstruction.py  forward_v6.py  hlt1_complex_validation.py  hlt1_cosmics.py  hlt1_goudi.py  hlt1_pp_SMOG2_default.py  hlt1_pp_SMOG2_validation.py  hlt1_pp_calo.py  hlt1_pp_default.py  hlt1_pp_default_1.py  (+134 more)
configuration/src/: TCK.cpp  bindings.cpp  default_properties.cpp
configuration/tests/: test_algorithms.py  test_cftree_ops.py  test_configuration.sh  test_event_list_utils.py
cuda/kalman/: CMakeLists.txt
cuda/muon/: CMakeLists.txt
cuda/raw_banks/: CMakeLists.txt
device/: CMakeLists.txt
device/SciFi/: CMakeLists.txt
device/UT/: CMakeLists.txt
device/associate/: CMakeLists.txt
device/calo/: CMakeLists.txt
device/combiners/: CMakeLists.txt
device/event_model/: CMakeLists.txt
device/example/: CMakeLists.txt
device/kalman/: CMakeLists.txt
device/lumi/: CMakeLists.txt  README.MD
device/muon/: CMakeLists.txt
device/plume/: CMakeLists.txt
device/quantum/: CMakeLists.txt
device/raw_banks/: CMakeLists.txt
device/selections/: CMakeLists.txt
device/svs_pair_candidates/: CMakeLists.txt
device/track_matching/: CMakeLists.txt
device/utils/: CMakeLists.txt
device/validators/: CMakeLists.txt
device/velo/: CMakeLists.txt
device/vertex_fit/: CMakeLists.txt
host/: CMakeLists.txt
host/combiners/: CMakeLists.txt
host/data_provider/: CMakeLists.txt
host/dummy_maker/: CMakeLists.txt
host/error_banks_cut/: CMakeLists.txt
host/event_model/: CMakeLists.txt
host/global_event_cut/: CMakeLists.txt  mep_test.cmake
host/init_event_list/: CMakeLists.txt
host/prefix_sum/: CMakeLists.txt
host/routing_bits/: CMakeLists.txt
host/routing_bits_configuration/: CMakeLists.txt
host/tae/: CMakeLists.txt
host/validators/: CMakeLists.txt
integration/: CMakeLists.txt  readme.md
integration/monitoring/: CMakeLists.txt  readme.md
integration/non_event_data/: CMakeLists.txt
mdf/: CMakeLists.txt
mdf/daq40/: sourceid.h
mdf/include/: eb_header.hpp  mdf_header.hpp  odin.hpp  raw_helpers.hpp  read_mdf.hpp  read_mep.hpp  root_mdf.hpp  write_mdf.hpp
mdf/src/: compression.cpp  raw_helpers.cpp  read_mdf.cpp  read_mep.cpp  root_mdf.cpp  write_mdf.cpp
mdf/test/: bench_mep_provider.cpp  bench_provider.cpp  bench_read.cpp  (+9 more)
stream/: CMakeLists.txt  GenerateConfiguration.cmake
zmq/: CMakeLists.txt
(+2297 files in other folders)
